# MOcean

./: Cargo.toml  LICENSE  README.md
src/: core.rs  cursor.rs  main.rs  mala.rs
src/widgets/: input.rs
