[package]
name = "m_ocean"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston = "0.54.0"
piston2d-graphics = "0.44.0"
pistoncore-glutin_window = "0.72.0"
piston2d-opengl_graphics = "0.83.0"
piston_window = "0.130.0"
find_folder = "0.3.0"
winapi = { version = "0.3", features = ["winuser"] }
tokio = { version = "1.32.0", features = ["full"] }
regex = "1.9.6"
